feat: Introduce language override and UI improvements
Adds the ability to override assistant language.
Introduces minor UI enhancements and fixes, including:
- Animation for text shake.
- World export file extension change to `.omni`.
- Updates to preset themes for better visual consistency.
- Refactored Settings app for potential future expansion with reset functionality.

--- a/index.html
+++ b/index.html
@@ -21,6 +21,17 @@
       ::-webkit-scrollbar-thumb:hover {
         background: rgba(156, 163, 175, 0.8);
       }
+      
+      @keyframes shake {
+        0% { transform: rotate(0deg); }
+        25% { transform: rotate(1deg); }
+        50% { transform: rotate(0deg); }
+        75% { transform: rotate(-1deg); }
+        100% { transform: rotate(0deg); }
+      }
+      .animate-shake {
+        animation: shake 0.2s infinite;
+      }
     </style>
   <script type="importmap">
 {
